<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- App Name -->
    <!--<string name="app_name">PixelMags app</string>-->
    <!--<string name="app_name">San Diego PREMIER</string>-->
    <!--<string name="app_name">TrailBike &amp; Enduro Magazine (TBM)</string>-->
    <!--<string name="app_name">Victoria</string>-->
    <!--<string name="app_name">Cooking with Paula Deen Magazine</string>-->
    <string name="app_name" >Phil Steele\'s College Mag</string>
    <!--<string name="app_name">Magazine Test Ironman</string>-->

    <!-- Generic - to re-use -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="view">View</string>


    <string name="magazine_id">Magazine Id</string>
    <string name="credits_available">Credits Available</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="subscription_production_id">Subscription Production ID</string>

    <!-- Navigation Menu Items -->
    <string name="menu_title_allissues">All Issues</string>
    <string name="menu_title_my_account">My Account</string>
    <string name="menu_title_login">Log in</string>
    <string name="menu_title_register">Register</string>
    <string name="menu_title_subscriptions">Subscriptions</string>
    <string name="menu_title_specialissues">Special Issues</string>
    <string name="menu_title_downloads">Downloads</string>
    <string name="menu_title_contactsupport">Contact Support</string>
    <string name="menu_title_about">About</string>
    <string name="menu_issue_view">Issue View</string>

    <string name="issue_owned">Issue already owned</string>
    <string name="error">Error</string>
    <string name="no">No</string>

    <!-- Action menu title-->
    <string name="action_menu_title">More</string>


    <!--All Issues Screen -->
    <string name="allIssues_purchase_title">Purchase</string>
    <string name="allIssues_purchase_message">Purchase issue</string>


    <!-- Activities/Fragment Titles -->
    <string name="fragment_title_register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Log In Screen -->
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>

    <string name="error_invalid_email">Email invalid</string>
    <string name="error_invalid_password">Password should be at least 6 characters.</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">Enter details</string>
    <string name="error_name">Enter name</string>
    <string name="error_email">Enter Email Id</string>
    <string name="password_length_not_matching">Both the password is not matching.</string>


    <string name="log_in_fail_title">Log in Failed</string>
    <string name="log_in_fail_message">Please check log in details and try again.</string>

    <string name="registration_fail_title">Registration Failed</string>

    <string name="log_in_progress_dialog_title">Logging in...</string>
    <string name="log_in_progress_dialog_message">Checking your details...</string>


    <!-- Register Screen -->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_date_of_birth">Date Of Birth</string>
    <!-- hint_email reused here-->
    <!-- hint_password reused here-->
    <string name="hint_confirm_password">Confirm password</string>
    <string name="accept_terms_and_conditions">I accept the Terms and Conditions</string>
    <string name="pick_date_of_birth">DatePicker</string>
    <string name="error_invalid_first_name">Enter firstname</string>


    <!-- Account Screen -->
    <string name="account_user_id">Account</string>
    <string name="account_user_email">Email</string>
    <string name="account_user_full_name">Name</string>


    <!-- About Screen -->
    <string name="hint_Version">Version</string>
    <string name="hint_Copyright">CopyRight</string>
    <string name="my_url">"http://www.pixelmags.com"</string>
    <string name="my_url1">"http://www.pixelmags.com/t+c/current"</string>

    <!-- Subscriptions Screen -->
    <string name="subscriptions_buy_now">Buy now</string>
    <string name="subscriptions_6_months">6 Months Subscription</string>
    <string name="subscriptions_3_months">3 Months Subscription</string>
    <string name="subscription_price_1">£1.99</string>
    <string name="subscription_price_2">£1.99</string>
    <string name="subscription_price_3">£1.99</string>

    <!--All Downloads Screen-->
    <string name="download_menu_pause">Pause</string>
    <string name="download_menu_resume">Resume</string>
    <string name="download_menu_delete">Delete</string>


    <!-- Download Strings -->
    <string name="download_queued">Issue queued for download.</string>
    <string name="download_queued_fail">Error with download. Please try again.</string>

    <string name="download_status_in_queue">In Queue</string>
    <string name="download_status_started">Downloading..</string>
    <string name="download_status_paused">Paused</string>
    <string name="download_status_completed">Complete</string>
    <string name="download_status_failed">Error</string>
    <string name="download_status_view">View</string>
    <!-- Post App Strings -->

    <string name="action_settings">Settings</string>
    <string-array name="action_account_settings">Account Settings</string-array>
    <string-array name="action_account_fragment_about">About</string-array>

    <!-- CAn Purchase Fail-->
    <string name="can_purchase_fail_title">Warning</string>
    <string name="can_purchase_fail_message">You cannot purchase this issue.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_fragment">Login fragment</string>
    <string name="register_fragment">Register fragment</string>
    <string name="title_activity_launch">LaunchActivity</string>

    <string name="hello_world">Hello world!</string>

    <!--Do not delete : test Activity-->
    <string name="title_activity_login">LaunchActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_support">Please choose any of the options below to reach out to us.</string>
    <string name="download_support">You have not started any downloads. Get started by going to the All Issue page.</string>
    <string name="PixelMags">PixelMags <a href="http://www.pixelmags.com"></a></string>
    <string name="Pixelmags">PixelMags <a href="http://www.pixelmags.com/t+c/current"></a></string>
    <string name="go_to_register">REGISTER</string>
    <string name="font_family_body_1_material">sans-serif</string>
    <string name="do_back">Back</string>
    <string name="pick_dateofbirth">PickDate</string>

    <!-- Purchase initiation failed as user is not logged in -->
    <string name="purchase_initiation_fail_title">Warning</string>
    <string name="purchase_initiation_fail_message">login to purchase this issue.</string>
    <string name="purchase_subscription_fail_message">login to purchase the subscription.</string>

    <string name="download_initiation_fail_title">Warning</string>
    <string name="download_initiation_fail_message">login to download this issue.</string>

    <string name="queue_initiation_title">Issue download is in queue!</string>
    <string name="queue_initiation_message">You can view your Issue once download start.</string>

    <string name="logout" >Are you sure you want to exit from Phil Steele\'s College Mag.?</string>

    <string name="termsCondition"><a href="http://www.pixelmags.com/t+c/current/">View Terms &amp; Condition</a></string>
    <string name="no_internet">Uh oh! \n\nLooks like you don\'t have an internet connection. Please connect to  network and try again.</string>
</resources>
