<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="com.pixelmags.android.ui.UserAccountFragment"
    android:padding="15dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:id="@+id/fragment_useraccount">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/labelUserId"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/account_user_id" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text=":"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dataUserId"
            android:textColor="#000000"
            android:text="Pixelmags User ID"
            android:textSize="18dp"
            android:layout_alignTop="@+id/labelUserId"
            android:layout_toRightOf="@+id/labelUserId"
            android:layout_toEndOf="@+id/labelUserId" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/labelUserEmail"
            android:textColor="#000000"
            android:text="@string/account_user_email"
            android:textSize="18dp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text=":"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress|textMultiLine"
            android:id="@+id/dataUserEmail"
            android:text="user email address"
            android:textColor="#000000"
            android:hint="user@email.com"
            android:textSize="18dp" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:id="@+id/labelUserName"
            android:textColor="#000000"
            android:textSize="18dp"
            android:text="@string/account_user_full_name" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text=":"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dataUserFullName"
            android:textColor="#000000"
            android:scrollbars = "vertical"
            android:text="Full Name"
            android:textSize="18dp"
            android:inputType="textCapWords|textCapSentences"/>


    </LinearLayout>



    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/accountLogout"
        android:layout_marginTop="8dip"
        android:onClick="onButtonClick"
        android:background="@drawable/shape"
        android:text=   "@string/log_out"
        android:textColor="#ffffff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>