<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subscription_details_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/magazine_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/magazine_id"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_weight="1.5"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/magazine_id_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignTop="@+id/labelUserId"
                android:layout_toEndOf="@+id/labelUserId"
                android:layout_toRightOf="@+id/labelUserId"
                tools:text="1578"
                android:textColor="@color/black"
                android:textSize="18dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/credits_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/credits_available"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_weight="1.5"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/credits_available_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignTop="@+id/labelUserId"
                android:layout_toEndOf="@+id/labelUserId"
                android:layout_toRightOf="@+id/labelUserId"
                tools:text="$15"
                android:textColor="@color/black"
                android:textSize="18dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/purchase_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/purchase_date"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_weight="1.5"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/purchase_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignTop="@+id/labelUserId"
                android:layout_toEndOf="@+id/labelUserId"
                android:layout_toRightOf="@+id/labelUserId"
                tools:text="20-10-2016"
                android:textColor="@color/black"
                android:textSize="18dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/expiry_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expiry_date"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_weight="1.5"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/expiry_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignTop="@+id/labelUserId"
                android:layout_toEndOf="@+id/labelUserId"
                android:layout_toRightOf="@+id/labelUserId"
                tools:text="10-01-2017"
                android:textColor="@color/black"
                android:textSize="18dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/subscription_production_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subscription_production_id"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_weight="1.5"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/subscription_production_id_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignTop="@+id/labelUserId"
                android:layout_toEndOf="@+id/labelUserId"
                android:layout_toRightOf="@+id/labelUserId"
                tools:text="1578"
                android:textColor="@color/black"
                android:textSize="18dp" />


        </LinearLayout>



    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="none"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>